Fix arrow spacing

--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -65,12 +65,12 @@
 
     span {
       background: rgba(#fff, .75);
+      margin-right: .5em;
     }
   }
 
   &__skipper {
     height: 1em;
-    padding-left: .5em;
     vertical-align: sub;
   }
 }
